infra/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cefetinder
  labels:
    app.kubernetes.io/name: cefetinder
